    - (interpret.c, mapping.c) Oops, the new checks also introduced
         divisions by 0 (reported by Menaures).
    - (sprintf.c) Runtime fieldsize specification by '%*' didn't check
         if the size was given as MIN_INT: it would try to negate it
         to get the positive number, but fail and cause the formatting
         routines to crash under circumstances (reported by Menaures).

10-Dec-2001 (Lars Duening)  (3.3.137)
    - (interpret.c) gcc 2.91 on Linux/x86 generates buggy code for
         MIN_INT % -1, so this case is now explicitely check for
         (reported by Menaures).
    - (interpret.c) Multiplication of a string with a number was
         not checked for numeric overflows in the computation of
         the result length (reported by Menaures).
    - (smalloc.c) Added a check against numeric overflows in the
         computation of the final memory block size.
    - (mapping.c) When allocating/resizing mappings, a check against
         numeric overflows in the size computations has been added
         (reported Menaures).

05-Dec-2001 (Lars Duening)  (3.3.136)
    - (backend.c) Before calling reset() or clean_up() from the backend,
        the previous_object is cleared (reported by Gnomi).
    - (main.c) New commandline option:
          --random-seed <num>
            Seed value for the random number generator. If not given, the
            driver chooses a seed value on its own.
            This option is for debugging.
    - (interpret.c) The mysterious code in calling alien lfun closures to
        create a second control frame, deactivated in 3.3.83, revealed
        its purpose: when for such a closure the bound object l->ob
        differs from the code object l->function.alien.ob, this fact
        needs to be recorded in order to prevent security holes. So the
        code fragment has been deactivated again with a small change: the
        second control frame will be created only if the two objects