@@ -20,13 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 138)
-(Parent-Version lpmud 3-3 137)
-(Version-Log "Oops, accidentally introduced divisions by 0.
-Removed a numeric overflow in sprintf().")
+(Project-Version lpmud 3-3 139)
+(Parent-Version lpmud 3-3 138)
+(Version-Log "Additions, subtractions and multiplications now check for numeric overflows.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 11 Dec 2001 17:55:15 -0700")
+(Checkin-Time "Tue, 11 Dec 2001 17:59:16 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -59,8 +58,8 @@ Removed a numeric overflow in sprintf().")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.4 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.33 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.201 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.225 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.202 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.226 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -140,7 +139,7 @@ Removed a numeric overflow in sprintf().")
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.22 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.101 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.102 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.9 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.70 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.7 644))
